project('lilu', 'cpp')

add_project_arguments(['-std=c++17'], language : 'cpp')
add_project_link_arguments(['-lstdc++'], language : 'cpp')
#add_project_arguments(['-stdlib=libc++', '-std=c++2a'], language : 'cpp')
#add_project_link_arguments(['-stdlib=libc++', '-lc++'], language : 'cpp')

subdir('include')
#subdir('stage0')
#subdir('stage1')
#subdir('bootstrap-pg')
#subdir('parsergenerator')
#subdir('stage2')
#subdir('src')
subdir('glr0')


